--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: [master]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,8 +23,23 @@ jobs:
     - name: Run tests
       run: npm test
 
-    - name: Build project
-      run: echo "Build step here if needed"
+    - name: Build Docker image
+      run: docker build -t your-docker-username/simple-nodejs-app .
 
-    - name: Deploy or custom script
-      run: echo "You can deploy here or use SSH/SCP/docker etc."
+    - name: Log in to DockerHub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    - name: Push image to DockerHub
+      run: docker push your-docker-username/simple-nodejs-app
+
+    - name: Deploy to EC2 via SSH
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ubuntu
+        key: ${{ secrets.EC2_SSH_KEY }}
+        script: |
+          docker pull your-docker-username/simple-nodejs-app
+          docker stop app || true
+          docker rm app || true
+          docker run -d -p 80:3000 --name app your-docker-username/simple-nodejs-app
