--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,7 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Run tests
-      run: npm test
+    # Removed the test step since you don't want to run tests
 
     - name: Build Docker image
       run: docker build -t your-docker-username/simple-nodejs-app .
