--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Push image to DockerHub
-      run: docker push your-docker-username/simple-nodejs-app
+      run: docker rithi0/simple-nodejs-app
 
     - name: Deploy to EC2 via SSH
       uses: appleboy/ssh-action@v1.0.0
@@ -41,4 +41,4 @@ jobs:
           docker pull rithi0/simple-nodejs-app
           docker stop app || true
           docker rm app || true
-          docker run -d -p 80:3000 --name app your-docker-username/simple-nodejs-app
+          docker run -d -p 80:3000 --name app rithi0/simple-nodejs-app
