--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Push image to DockerHub
-      run: docker rithi0/simple-nodejs-app
+      run: docker push rithi0/simple-nodejs-app
 
     - name: Deploy to EC2 via SSH
       uses: appleboy/ssh-action@v1.0.0
